deploy: 319d42db1c1e25c9f06bc5a6d4d019966c95ccc1

--- a/index.html
+++ b/index.html
@@ -1044,8 +1044,7 @@
 
 
 <h1 id="welcome">Welcome.!</h1>
-<p>Your ultimate playbook for coding snippets, best practices, procedures, and HowTos based on my experience and
-reference.</p>
+<p>The Ultimate Playbook for coding snippets, references, procedures and How-Tos based on real life experience.</p>
 
 
 
