deploy: 25a6436852ed731530d3804fd3e90c8ca0e63ec2

--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 
 
 <h1 id="welcome">Welcome.!</h1>
-<p>The Ultimate Playbook for coding snippets, references, procedures and How-Tos based on real life experience.</p>
+<p>The Ultimate Playbook for coding snippets, references, procedures and How-Tos based on real time experience.</p>
 
 
 
