--- a/how-to-articles/open-rewrite.html
+++ b/how-to-articles/open-rewrite.html
@@ -1480,11 +1480,14 @@ modernize and improve their codebases efficiently.</p>
 <p>To achieve the approach, follow below steps,</p>
 <ul>
 <li>To control <code>rewrite:run</code> and <code>rewrite:dryRun</code> goals, define two toggle and set default values
-  <div class="language-xml highlight"><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1" href="#__codelineno-1-1"></a><span class="w">  </span><span class="cm">&lt;!-- open-rewrite &quot;run&quot; toggle which make changes in source code: default enabled  --&gt;</span>
-</span><span id="__span-1-2"><a id="__codelineno-1-2" name="__codelineno-1-2" href="#__codelineno-1-2"></a><span class="w">  </span><span class="nt">&lt;rewrite-maven-plugin.skip.run-execution&gt;</span>false<span class="nt">&lt;/rewrite-maven-plugin.skip.run-execution&gt;</span>
-</span><span id="__span-1-3"><a id="__codelineno-1-3" name="__codelineno-1-3" href="#__codelineno-1-3"></a>
-</span><span id="__span-1-4"><a id="__codelineno-1-4" name="__codelineno-1-4" href="#__codelineno-1-4"></a><span class="w">  </span><span class="cm">&lt;!-- open-rewrite &quot;dryRun&quot; toggle which does make changes, instead provide report for anticipated changes: default enabled  --&gt;</span>
-</span><span id="__span-1-5"><a id="__codelineno-1-5" name="__codelineno-1-5" href="#__codelineno-1-5"></a><span class="w">  </span><span class="nt">&lt;rewrite-maven-plugin.skip.dry-run-execution&gt;</span>false<span class="nt">&lt;/rewrite-maven-plugin.skip.dry-run-execution&gt;</span>
+  <div class="language-xml highlight"><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1" href="#__codelineno-1-1"></a><span class="nt">&lt;properties&gt;</span>
+</span><span id="__span-1-2"><a id="__codelineno-1-2" name="__codelineno-1-2" href="#__codelineno-1-2"></a><span class="w">  </span><span class="cm">&lt;!-- open-rewrite &quot;run&quot; toggle which make changes in source code: default enabled  --&gt;</span>
+</span><span id="__span-1-3"><a id="__codelineno-1-3" name="__codelineno-1-3" href="#__codelineno-1-3"></a><span class="w">  </span><span class="nt">&lt;rewrite-maven-plugin.skip.run-execution&gt;</span>false<span class="nt">&lt;/rewrite-maven-plugin.skip.run-execution&gt;</span>
+</span><span id="__span-1-4"><a id="__codelineno-1-4" name="__codelineno-1-4" href="#__codelineno-1-4"></a>
+</span><span id="__span-1-5"><a id="__codelineno-1-5" name="__codelineno-1-5" href="#__codelineno-1-5"></a><span class="w">  </span><span class="cm">&lt;!-- open-rewrite &quot;dryRun&quot; toggle which does make changes, instead provide report for anticipated changes: default enabled  --&gt;</span>
+</span><span id="__span-1-6"><a id="__codelineno-1-6" name="__codelineno-1-6" href="#__codelineno-1-6"></a><span class="w">  </span><span class="nt">&lt;rewrite-maven-plugin.skip.dry-run-execution&gt;</span>false<span class="nt">&lt;/rewrite-maven-plugin.skip.dry-run-execution&gt;</span>
+</span><span id="__span-1-7"><a id="__codelineno-1-7" name="__codelineno-1-7" href="#__codelineno-1-7"></a><span class="w">  </span>...
+</span><span id="__span-1-8"><a id="__codelineno-1-8" name="__codelineno-1-8" href="#__codelineno-1-8"></a><span class="nt">&lt;/properties&gt;</span>
 </span></code></pre></div></li>
 <li>Disable <code>rewrite:run</code> toggle for CI profile based <code>CI</code> env variable.</li>
 <li>Please find below pom.xml which contains CI profile with toggle and dryRun execute in CI pipeline and recipes applied
