deploy: c8c6bdc0f57c671688f934da3d48771f2dbc0e57

--- a/how-to-articles/new-java-application-checklist.html
+++ b/how-to-articles/new-java-application-checklist.html
@@ -1306,6 +1306,12 @@
   
 
 
+<style>
+ ul {
+    font-size: 0.7rem;
+}
+</style>
+
 <h1 id="checklist-for-new-java-application-or-service">Checklist for New Java Application or Service</h1>
 <p>This article outlines the essential steps and considerations for Creating a new Java Application or Service</p>
 <ul class="task-list">
