deploy: fcce4ef4d2289f045bbb22a369bef3ba46049009

--- a/how-to-articles/intellij-live-templates.html
+++ b/how-to-articles/intellij-live-templates.html
@@ -1631,10 +1631,11 @@
 
 
 <h1 id="intellij-idea-live-templates">IntelliJ IDEA Live Templates</h1>
-<p>You can download all below live templates as a file.</p>
+<div class="admonition tip">
+<p class="admonition-title">You can download all below live templates as a file</p>
 <p><a class="md-button md-button--primary" href="../assets/data/intellij-idea-live-templates/custom-intellij-idea-live-templates.xml">Download File</a></p>
-<p>You can place them inside your IntelliJ IDEA in
-<code>~/Library/Application Support/JetBrains/&lt;IntelliJIdea version&gt;/templates/</code></p>
+<p>You can place them inside your IntelliJ IDEA in <code>~/Library/Application Support/JetBrains/&lt;IntelliJIdea version&gt;/templates/</code></p>
+</div>
 <h2 id="java">Java</h2>
 <p><strong>Static Factory Method</strong></p>
 <div class="language-shell highlight"><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="c1"># Template Name: factoryMethod</span>
