--- a/improvements/code-health-improvements.html
+++ b/improvements/code-health-improvements.html
@@ -1968,7 +1968,8 @@
     Made with
     <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
         Material for MkDocs
-    </a>
+    </a> |
+    <a href="#__consent">Change Cookie Settings</a>
 
 </div>
       
