--- a/java/email-templates.html
+++ b/java/email-templates.html
@@ -1998,7 +1998,8 @@
     Made with
     <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
         Material for MkDocs
-    </a>
+    </a> |
+    <a href="#__consent">Change Cookie Settings</a>
 
 </div>
       
