--- a/java/java-notes.html
+++ b/java/java-notes.html
@@ -1868,7 +1868,8 @@
     Made with
     <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
         Material for MkDocs
-    </a>
+    </a> |
+    <a href="#__consent">Change Cookie Settings</a>
 
 </div>
       
