--- a/tags.html
+++ b/tags.html
@@ -3601,7 +3601,8 @@ together, allowing for quick navigation and discovery.</p>
     Made with
     <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
         Material for MkDocs
-    </a>
+    </a> |
+    <a href="#__consent">Change Cookie Settings</a>
 
 </div>
       
