--- a/testings/automation-tips.html
+++ b/testings/automation-tips.html
@@ -1955,7 +1955,8 @@
     Made with
     <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
         Material for MkDocs
-    </a>
+    </a> |
+    <a href="#__consent">Change Cookie Settings</a>
 
 </div>
       
