--- a/index.html
+++ b/index.html
@@ -1811,6 +1811,12 @@
       </li>
     
       <li>
+        <a href="blog/custom-health-info-actuator-endpoints.html">
+          Mastering Spring Boot Actuator: Deep Dive into Health Indicators & Info Contributors
+        </a>
+      </li>
+    
+      <li>
         <a href="blog/clean-architecture-developer-journey.html">
           Pragmatic Clean Architecture: A Developer's Journey Beyond Theory
         </a>
