deploy: 0827bc7514608e0ed83cd2c3bd22528ae9554a0c

--- a/index.html
+++ b/index.html
@@ -1838,8 +1838,8 @@
       </li>
     
       <li>
-        <a href="blog/custom-health-info-actuator-endpoints.html">
-          Mastering Spring Boot Actuator: Deep Dive into Health Indicators & Info Contributors
+        <a href="blog/passkey-implementation.html">
+          Passkey (WebAuthn) Login in Spring Boot: Stateless Auth with JWT & Yubico: Developer's Guide
         </a>
       </li>
     
