deploy: ba00d1be228f37518b20eb851876d5712676f0c3

--- a/index.html
+++ b/index.html
@@ -1854,7 +1854,7 @@
     
       <li>
         <a href="blog/setup-virtual-private-server.html">
-          Self-Hosting for Developers: A Practical Guide to Virtual Private Server (VPS) Hosting with Docker & Monitoring
+          Self-Hosting for Developers: A Practical Guide to VPS Hosting with Docker & Monitoring
         </a>
       </li>
     
