deploy: 08fbc940646d03ecad5ee1f813813d9af851dc9b

--- a/index.html
+++ b/index.html
@@ -1847,6 +1847,12 @@
       </li>
     
       <li>
+        <a href="blog/setup-nginx-with-waf.html">
+          Secure Your Web Application with OWASP Core Rule Set: A Developer’s Guide
+        </a>
+      </li>
+    
+      <li>
         <a href="blog/self-contained-system-architecture.html">
           Self-Contained Systems Architecture in Practice: Wins and Challenges
         </a>
