deploy: d17a3052492ba4fa0e44b905a46b43461afdba99

--- a/tags.html
+++ b/tags.html
@@ -3605,6 +3605,12 @@ together, allowing for quick navigation and discovery.</p>
   <ul>
     
       <li>
+        <a href="blog/checkstyle-with-open-rewrite.html">
+          Automating Java Style Guide Enforcement with Checkstyle and OpenRewrite
+        </a>
+      </li>
+    
+      <li>
         <a href="blog/passkey-implementation.html">
           Passkey (WebAuthn) Login in Spring Boot: Stateless Auth with JWT & Yubico: Developer's Guide
         </a>
