deploy: 63e1c020fa27410e2423c25b1360ca1f39fa3c9e

--- a/others/personal-finance/prompt/weekly-fund-evaluation-for-lumpsum.html
+++ b/others/personal-finance/prompt/weekly-fund-evaluation-for-lumpsum.html
@@ -2390,6 +2390,7 @@
 <p class="admonition-title">Info</p>
 <p>This is a AI prompt template to analyze weekly valuation of various indices and mutual funds to recommend where to invest a weekly lumpsum.</p>
 </div>
+<p><a class="md-button md-button--primary" download="weekly-fund-evaluation-for-lumpsum.txt" href="../../../assets/data/prompt/weekly-fund-evaluation-for-lumpsum.txt">Download Prompt</a></p>
 <h1 id="weekly-valuation-check-investment-decision">WEEKLY VALUATION CHECK &amp; INVESTMENT DECISION</h1>
 <p>I want you to analyze valuation of the following indices and fund categories and tell me where to invest my ₹5000 weekly
 lumpsum.</p>
