--- a/others/personal-finance/prompt/weekly-fund-evaluation-for-lumpsum.html
+++ b/others/personal-finance/prompt/weekly-fund-evaluation-for-lumpsum.html
@@ -2212,8 +2212,7 @@
 <h1 id="weekly-valuation-check-investment-decision">WEEKLY VALUATION CHECK &amp; INVESTMENT DECISION</h1>
 <p>This is an AI prompt template to analyze weekly valuation of various indices and mutual funds to recommend where to
 invest a weekly lumpsum.</p>
-<p><a href="../../../assets/data/prompt/weekly-fund-evaluation-for-lumpsum.txt">Download Prompt</a>{ .md-button .md-button--primary
-download="weekly-fund-evaluation-for-lumpsum.txt" }</p>
+<p><a class="md-button md-button--primary" download="weekly-fund-evaluation-for-lumpsum.txt" href="../../../assets/data/prompt/weekly-fund-evaluation-for-lumpsum.txt">Download Prompt</a></p>
 
 
 
