deploy: 4a1f9ba9df03f97616356b3140613d1a6eee3bd3

--- a/others/personal-finance/my-systematic-investment-framework.html
+++ b/others/personal-finance/my-systematic-investment-framework.html
@@ -3099,9 +3099,10 @@
 
 
 <h1 id="my-systematic-investment-framework">My Systematic Investment Framework</h1>
-<blockquote>
-<p>Rules-Based Asset Allocation, Risk Management &amp; Rebalancing</p>
-</blockquote>
+<p><strong>Review Checklist</strong>:
+✅ <a href="#monthly-review-checklist-1015-minutes">Monthly</a> | 
+✅ <a href="#quarterly-review-checklist-3045-minutes">Quarterly</a> | 
+✅ <a href="#annual-review-checklist-6090-minutes">Annual</a></p>
 <h2 id="overview">Overview</h2>
 <p>This document defines <strong>My Systematic Investment Framework</strong>, a structured and rule-based approach to managing my
 personal investments in the share market(Indian Equity).</p>
