deploy: 3805856375a54eb97f0b4fd6aacdfc72713c3734

--- a/others/personal-finance/my-systematic-investment-framework.html
+++ b/others/personal-finance/my-systematic-investment-framework.html
@@ -3100,8 +3100,8 @@
 
 <h1 id="my-systematic-investment-framework">My Systematic Investment Framework</h1>
 <p><strong>Review Checklist</strong>:
-✅ <a href="#monthly-review-checklist-1015-minutes">Monthly</a> | 
-✅ <a href="#quarterly-review-checklist-3045-minutes">Quarterly</a> | 
+✅ <a href="#monthly-review-checklist-1015-minutes">Monthly</a> |
+✅ <a href="#quarterly-review-checklist-3045-minutes">Quarterly</a> |
 ✅ <a href="#annual-review-checklist-6090-minutes">Annual</a></p>
 <h2 id="overview">Overview</h2>
 <p>This document defines <strong>My Systematic Investment Framework</strong>, a structured and rule-based approach to managing my
@@ -3195,6 +3195,30 @@ volatility.</p>
 <thead>
 <tr>
 <th>Asset Class</th>
+<th>%</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Equity</td>
+<td>70%</td>
+</tr>
+<tr>
+<td>Debt</td>
+<td>20%</td>
+</tr>
+<tr>
+<td>Gold/Silver</td>
+<td>10%</td>
+</tr>
+</tbody>
+</table>
+<p>To simplify implementation and monitoring, the above allocation is further broken down by adding Hybrid as a separate
+asset class.</p>
+<table>
+<thead>
+<tr>
+<th>Asset Class</th>
 <th>Target Allocation</th>
 </tr>
 </thead>
@@ -3229,8 +3253,8 @@ volatility.</p>
 <tbody>
 <tr>
 <td>Large Cap</td>
-<td>50%</td>
-<td>30%</td>
+<td>55%</td>
+<td>33%</td>
 </tr>
 <tr>
 <td>Mid Cap</td>
@@ -3244,8 +3268,8 @@ volatility.</p>
 </tr>
 <tr>
 <td>Flexi / Value</td>
-<td>15%</td>
-<td>9%</td>
+<td>10%</td>
+<td>6%</td>
 </tr>
 <tr>
 <td>International</td>
@@ -3341,12 +3365,12 @@ more volatile and are better suited for opportunistic lumpsum investments rather
 <tr>
 <td>Equity - Core Large Cap Fund</td>
 <td>40%</td>
-<td>₹4,000</td>
+<td>₹4,500</td>
 </tr>
 <tr>
 <td>Equity - Flexi / Value Fund</td>
-<td>15%</td>
-<td>₹1,500</td>
+<td>10%</td>
+<td>₹1,000</td>
 </tr>
 <tr>
 <td>Equity - International Fund</td>
