deploy: a5c5a3fd5b0725488280861df7a5c85d71f5f0b8

--- a/others/personal-finance/my-systematic-investment-framework.html
+++ b/others/personal-finance/my-systematic-investment-framework.html
@@ -3348,7 +3348,7 @@ stabilizing assets.</p>
 <td>10%</td>
 </tr>
 <tr>
-<td>Defensive Assets</td>
+<td>Defensive</td>
 <td>Gold &amp; Silver</td>
 <td>-</td>
 <td>-</td>
